src/objects/loan__Office_Name__c.object
<CustomObject>
    <description>Name of the office</description>
    <fields>
        <fullName>loan__Bank_Account_Checks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account (Checks)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Branches3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Branch_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Branch_s_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For the fractionalization platform this is the main trust account.</inlineHelpText>
        <label>Company&apos;s Bank</label>
        <referenceTo>loan__Bank__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Cash_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash account tied to this branch.</description>
        <inlineHelpText>Please select the cash account you would like to associate with this branch.</inlineHelpText>
        <label>Cash Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>GL is neither of type ASSET nor a master account.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Account_Type__r.Name</field>
                <operation>equals</operation>
                <value>10000 - ASSETS</value>
            </filterItems>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Check_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account (Operations)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Current_System_Date__c</fullName>
        <label>Current System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Days_in_advance_to_create_Collection_Rep__c</fullName>
        <label>Days in advance to create Collection Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Inward_Check_Clearance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inward Check Clearance Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Is_Branch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Branch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Schedule_tied_to_Meeting_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Loan Schedule tied to Meeting Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Mark_Suspended_After_Days__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Mark Suspended After Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Office_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Address</description>
        <label>Location</label>
        <referenceTo>loan__Branch_Location__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Office_Name_ID__c</fullName>
        <description>Company ID</description>
        <displayFormat>Off-{0000}</displayFormat>
        <inlineHelpText>Company ID</inlineHelpText>
        <label>Company ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>loan__Office_Short_Name__c</fullName>
        <description>Office Short Name</description>
        <inlineHelpText>Office Short Name</inlineHelpText>
        <label>Short Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Office_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Office Type</description>
        <label>Type</label>
        <referenceTo>loan__Office_Type__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Outward_Check_Clearance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outward Check Clearance Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a master GL.</errorMessage>
            <filterItems>
                <field>loan__MF_Account__c.loan__Is_Master__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Branches2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Parent_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Office</description>
        <inlineHelpText>Parent Office</inlineHelpText>
        <label>Parent Company</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Companies</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Profit_and_Loss_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit and Loss Account</label>
        <referenceTo>loan__MF_Account__c</referenceTo>
        <relationshipName>Profit_and_Loss_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Write_Off_Suggestion_Days__c</fullName>
        <label>Write Off Suggestion Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Company</label>
    <nameField>
        <label>Company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <recordTypes>
        <fullName>loan__Root_Branch</fullName>
        <active>true</active>
        <description>This is the root branch/office in the organization. There can only be 1 such branch.</description>
        <label>Root Branch</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__System_UpdateDate_Check</fullName>
        <active>true</active>
        <description>Current system date shouldn&apos;t be beyond the current calender date</description>
        <errorConditionFormula>loan__Current_System_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Curent system date :[loan__Current_System_Date__c] shouldn&apos;t be beyond the current calender date:[TODAY()]</errorMessage>
    </validationRules>
</CustomObject>